--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,11 +14,34 @@
 
   &__sidebar-btn {
     @include icon-btn(50px, '../img/menu.svg');
+    @include overlayed-pseudo($type: 'before');
     @extend .u-only-handheld;
+
+    &::before {
+      background-color: map-get($pot-blue, 5);
+      mask-image: url('../img/close.svg');
+      mask-position: center center;
+      mask-repeat: no-repeat;
+      mask-size: 60%;
+      transition: mask-image $transition;
+    }
+
+    &:hover,
+    &:focus {
+      &::before {
+        background-color: #fff;
+      }
+    }
+
+    &:not([sidebar-visible]) {
+      &::before {
+        display: none;
+      }
+    }
 
     &[sidebar-visible] {
       &::after {
-        mask-image: url('../img/close.svg');
+        display: none;
       }
     }
   }
